--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.6.0",
     "dotenv": "^16.5.0",
+    "google-auth-library": "^9.15.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
