variables de entorno para nodemailer en example

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,8 @@ JWT_SECRET=
 STRIPE_SECRET_KEY=
 FRONTEND_URL=
 #Nodemailer
-MAIL_USER=cuenta_gmail
-MAIL_PASS=
+MAIL_USER=safestock08@gmail.com
+MAIL_PASS="ubqw onao zxxi nvmg"
 #para definir la variable de entorno MAIL_PASS:
 #1.Gestionar cuenta google
 #2.Seguridad
