--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,6 @@ JWT_SECRET=
 STRIPE_SECRET_KEY=
 FRONTEND_URL=
 #Nodemailer
-MAIL_USER=safestock08@gmail.com
-MAIL_PASS="ubqw onao zxxi nvmg"
-#para definir la variable de entorno MAIL_PASS:
-#1.Gestionar cuenta google
-#2.Seguridad
-#3.Activar la verificacion en dos pasos
-#4.Crear una contraseña de aplicacion
-#5.Te brindara una contraseña de 16 caracteres, encierrala entre comillas dobles en la variable de entorno
+MAIL_USER=
+MAIL_PASS=
+
